<?xml version="1.0"?>
<package>
  <name>giskard_boxy</name>
  <version>0.0.1</version>
  <description>
    Robot-specific configuration and launch-files to use giskard controllers on the Boxy robot.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--run_depend>giskard_ros</run_depend-->
  <run_depend>iai_boxy_sim</run_depend>
  <run_depend>giskard_ros</run_depend>
</package>
